# test

./: Cargo.toml  build.rs
.github/workflows/: release.yaml  test.yml
src/: main.rs
ui/: mainwindow.slint
