[package]
name = "test"
version = "0.1.33"
edition = "2021"

[dependencies]
openssl = { version = "0.10.64", features = ["vendored"] }
self_update = { version = "0.40.0", features = [
    "archive-tar",
    "compression-flate2",
] }

slint = "1.6.0"

[build-dependencies]
slint-build = "1.6.0"

[profile.release]
debug = 0
